--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.8.1
 certifi==2025.6.15
 charset-normalizer==3.4.2
-Django==5.2.3
-gunicorn==23.0.0
+Django==5.2.4
+uvicorn
 idna==3.10
 packaging==25.0
 pillow==11.2.1
