--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-asgiref==3.8.1
-certifi==2025.6.15
-charset-normalizer==3.4.2
+asgiref
+certifi
+charset-normalizer
 Django==5.2.4
 uvicorn
-idna==3.10
-packaging==25.0
-pillow==11.2.1
-requests==2.32.4
-sqlparse==0.5.3
-tzdata==2025.2
-urllib3==2.5.0
-whitenoise==6.9.0
+idna
+packaging
+pillow
+requests
+sqlparse
+tzdata
+urllib3
+whitenoise
 psycopg2
 dj_database_url
